--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -137,13 +137,22 @@ ion-label {
     box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12);
 }
 
-.chead {
+.chead_Rural {
     height: 2.5em;
-    background-color: #10dda6;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     display: flex;
     flex-direction: row;
+    background-color: var(--ion-color-options);
+}
+
+.chead_Urbano{
+    height: 2.5em;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    background-color: var(--ion-color-information);
 }
 
 .ccontent {
