--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,7 +17,7 @@
         <div class="slider">
             <ion-slides class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
                 <ion-slide class="sliderHijo">
-                    <a class="banner" href="https://wa.me/59899468473?text=Hola,%20quería%20consultar%20sobre%20el%20servicio%20de20%alquiler%20de%20bicicletas.">
+                    <a class="banner" href="https://api.whatsapp.com/send?phone=59899468473&text=Hola,%20quer%C3%ADa%20consultar%20sobre%20el%20servicio%20de%20alquiler%20de%20bicicletas.">
                         <ion-fab vertical="top" horizontal="start" slot="fixed">
                             <ion-fab-button color="whatsapp">
                                 <ion-icon class="logoWhatsapp" name="logo-whatsapp"></ion-icon>
