arreglo tarjetas circuitos

--- a/src/app/pages/circuits/circuits.page.html
+++ b/src/app/pages/circuits/circuits.page.html
@@ -13,7 +13,7 @@
             {{ item.nombre }} <span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span> {{item.ciudad}}
         </ion-card-header>
         <ion-card-content>
-            <img width="auto" height="40%" src="{{ item.imagenPrincipal }}" alt="{{ item.nombre }}">
+            <img src="{{ item.imagenPrincipal }}" alt="{{ item.nombre }}">
             <div class="duracion">
                 Recorre la ciudad
                 <div class="estrellas">
@@ -31,7 +31,7 @@
             Rural &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; {{ item.nombre }}
         </ion-card-header>
         <ion-card-content>
-            <img width="auto" height="40%" src="{{ item.imagenPrincipal }}" alt="{{ item.nombre }}">
+            <img src="{{ item.imagenHome }}" alt="{{ item.nombre }}">
             <div class="duracion">
                 <b>+ Mal Abrigo</b>
                 <div class="estrellas">
