--- a/src/app/pages/circuits/circuits.page.scss
+++ b/src/app/pages/circuits/circuits.page.scss
@@ -33,7 +33,7 @@ ion-card-header{
 
 ion-card {
     img {
-        height: 25vh !important;
+        height: auto;
         width: 100% !important;
         max-width: 100%;
         align-items: center;
