--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -62,17 +62,12 @@ ion-label {
 }
 
 .slider {
-
     width: 100%;
-    height: auto;
-
-    //border: 1px solid black;
-}
+    }
 
 .menu {
     margin: 3% 7% 3% 7%;
     height: 7%;
-    //border: 1px solid black;
 }
 
 
@@ -85,11 +80,7 @@ ion-label {
 }
 
 .cards {
-    height: 100%;
-    width: 100%;
     overflow-y: scroll;
-    // background-color: crimson;
-    //border: 1px solid black;
 }
 
 .distancia {
@@ -108,7 +99,6 @@ ion-label {
 .sliderHijo,
 .bannerLink,
 .imgSlider {
-    //height: 100%;
     width: 100%;
 }
 
@@ -116,91 +106,23 @@ ion-label {
 .sliderHijo,
 .banner,
 .imgSlider {
-    //height: 100%;
     width: 100%;
 }
 
-
-// .cpadre {
-//     height: 100%;
-//     width: 100%;
-//     //margin-left: 8%;
-//     //margin-right: 8%;
-//     margin-left: 1.5%;
-//     margin-right: 1.5%;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     border-bottom-right-radius: 5px;
-//     border-bottom-left-radius: 5px;
-//     border-top-right-radius: 5px;
-//     border-top-left-radius: 5px;
-//     -webkit-box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12);
-//     -moz-box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12);
-//     box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12);
-// }
-
-// .chead_Rural {
-//     height: 2.5em;
-//     border-top-right-radius: 5px;
-//     border-top-left-radius: 5px;
-//     display: flex;
-//     flex-direction: row;
-//     background-color: var(--ion-color-options);
-// }
-
-// .chead_Urbano{
-//     height: 2.5em;
-//     border-top-right-radius: 5px;
-//     border-top-left-radius: 5px;
-//     display: flex;
-//     flex-direction: row;
-//     background-color: var(--ion-color-information);
-// }
-
-// .ccontent {
-//     height: 77%;
-// }
-
-// .cfooter {
-//     height: 2.5em;
-//     border-bottom-right-radius: 5px;
-//     border-bottom-left-radius: 5px;
-//     display: flex;
-//     flex-direction: row;
-// }
-
-// .ccontent {
-//     .foto {
-//         width: 100%;
-//     }
-// }
-
-// .valoracion {
-//     margin-left: auto;
-//     font-size: 80%;
-//     margin-top: auto;
-//     margin-bottom: auto;
-// }
-
-// .distancia {
-//     font-size: 80%;
-//     margin-top: auto;
-//     margin-bottom: auto;
-// }
-
-.logoWhatsapp{
+.logoWhatsapp {
     color: #fff;
 }
 
-ion-card{
+ion-card {
     margin: 0 5% 5% 5%;
     border: none !important;
-    box-shadow: none !important;
     border-radius: 15px !important;
+    -webkit-box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12) !important;
+    -moz-box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12) !important;
+    box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12) !important;
 }
 
-ion-card-header{
+ion-card-header {
     padding: 4% !important;
     font-family: Barlow;
     font-weight: 600;
@@ -210,19 +132,13 @@ ion-card-header{
     border-top-right-radius: 15px !important;
 }
 
-ion-card {
-    img {
-        height: auto;
-        width: 100% !important;
-        max-width: 100%;
-        align-items: center;
-    }
-
-    ion-card-content {
-        padding: 0 !important;
-    }
-}
-
-.estrellas{
+.estrellas {
     float: right;
+    margin-right: 3%;
 }
+
+.imgCard{
+    height: auto;
+    width: 100%;
+}
+
