--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -31,7 +31,7 @@
                         <img class="imgSlider" src="/assets/img/casaDominga.jpeg" />
                     </a>
                 </ion-slide>
-                <ion-slide class="sliderHijo" [routerLink]="['/']">
+                <ion-slide class="sliderHijo" [routerLink]="['/places/9']">
                     <div class="banner">
                         <img class="imgSlider" src="/assets/img/alquiler.jpeg" />
                     </div>
