--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -72,7 +72,7 @@
                     </div>
                 </ion-col>
                 <ion-col>
-                    <p class="text">Arte y Cultura</p>
+                    <p class="text">Arte y Cultura <span>&nbsp;&nbsp;</span><em>en desarrollo</em></p>
                 </ion-col>
             </ion-row>
         </a>
@@ -84,7 +84,7 @@
                     </div>
                 </ion-col>
                 <ion-col>
-                    <p class="text">SJ Eventos</p>
+                    <p class="text">SJ Eventos<span>&nbsp;&nbsp;</span><em>en desarrollo</em></p>
                 </ion-col>
             </ion-row>
         </a>
@@ -96,7 +96,7 @@
                     </div>
                 </ion-col>
                 <ion-col>
-                    <p class="text">Visitas guiadas</p>
+                    <p class="text">Visitas guiadas<span>&nbsp;&nbsp;</span><em>en desarrollo</em></p>
                 </ion-col>
             </ion-row>
         </a>
