--- a/src/app/pages/more-options/more-options.page.scss
+++ b/src/app/pages/more-options/more-options.page.scss
@@ -73,3 +73,13 @@ span {
     bottom: 0;
     position: relative;
 }
+
+em{
+    background: #ff8000;
+    font-size: 0.7em;
+    color: white;
+    padding: 1px 5px;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+}
