--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -36,7 +36,7 @@
         </ion-fab-button>
         <ion-fab-list side="bottom" class="lista_videos">
             <ion-fab-button class="btn_video" *ngFor="let videos of video">
-                <i (click)="verVideo(videos.video)" class="fas fa-video"></i>
+                <i (click)="verVideo(videos.video)" class="fas fa-video" style="font-size: 230%;"></i>
             </ion-fab-button>
         </ion-fab-list>
     </ion-fab>
