--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -181,6 +181,8 @@ ion-title {
 
 .btn_video{
     margin-top: 10%;
+    height: 60px;
+    width: 60px;
 }
 
 @media only screen and (min-width: 768px) {
