--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -181,8 +181,14 @@ ion-title {
 
 .btn_video{
     margin-top: 10%;
-    height: 60px;
-    width: 60px;
+}
+
+.btn_redes{
+     margin-bottom: 10%;
+}
+
+.redes_sociales{
+    margin-bottom: 100%;
 }
 
 @media only screen and (min-width: 768px) {
