--- a/src/app/pages/modal-info/modal-info.page.scss
+++ b/src/app/pages/modal-info/modal-info.page.scss
@@ -1,3 +1,39 @@
-.texto{
-	margin: 6%;
+.texto {
+    margin: 6%;
+}
+
+ion-grid {
+    margin-left: 12%;
+    margin-right: 12%;
+}
+
+.circulo_red {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    background: var(--ion-color-dark);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0px auto;
+    padding: 3%
+}
+
+.circulo_red_wpp {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    background: var(--ion-color-whatsapp);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0px auto;
+    padding: 3%
+}
+
+i {
+    color: var(--ion-color-light) !important;
+    font-size: 1.5rem !important;
 }
