--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="home" color="back" text=""></ion-back-button>
         </ion-buttons>
-        <ion-title color="back" id="nombre">{{nombre}}</ion-title>
+        <ion-title color="back" id="nombre">{{nombre}} <!-- <span>&nbsp;&nbsp;<i class="fas fa-globe"></i></span> --></ion-title>
         <ion-buttons slot="primary">
             <ion-button color="back" *ngIf="fav?.length == 0" (click)=agregarFavorito()>
                 <i id="fav" class="far fa-heart"></i>
@@ -40,6 +40,28 @@
             </ion-fab-button>
         </ion-fab-list>
     </ion-fab>
+
+    <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button color="dark">
+            <ion-icon name="arrow-up-circle-outline"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="top" class="redes_sociales">
+            <ion-fab-button class="btn_redes" color="favorite">
+                <i class="fas fa-globe"></i>
+            </ion-fab-button>
+            <ion-fab-button class="btn_redes" color="primary">
+                <i class="fab fa-facebook"></i>
+            </ion-fab-button>
+            <ion-fab-button class="btn_redes" color="danger">
+                <i class="fab fa-instagram"></i>
+            </ion-fab-button>
+            <ion-fab-button class="btn_redes" color="circuits">
+                <i class="fab fa-twitter" style="color: white"></i>
+            </ion-fab-button>
+        </ion-fab-list>
+    </ion-fab> -->
+
+
     <div id="key">{{ key }}</div>
     <div class="padre">
         <div class="diva">
@@ -64,8 +86,11 @@
                     <i class="fas fa-running"></i>
                 </div>
                 <div id="dist">
-                    <div>{{ distancia | formatDistancia }}</div>
+                    <div>{{ distancia | formatDistancia }}</div>                 
                 </div>
+               <!--  <div class="iconEstilos">
+                    <i class="fas fa-globe"></i>
+                </div> -->
                 <div class="estrellas">
                     <app-rating class="valoracion" [(rating)]="totalValoracion"></app-rating>
                     <!-- <ion-rating [rate]="totalValoracion" readonly="true" size="small">
