--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -181,6 +181,8 @@ ion-title {
 
 .btn_video{
     margin-top: 10%;
+    height: 45px;
+    width: 45px;
 }
 
 .btn_redes{
@@ -301,11 +303,6 @@ ion-title {
         margin: 3% 2% 0 0;
         font-size: 25px;
     }
-
-    .diva {
-        width: 100%;
-        height: 34%;
-    }
 }
 
 @media only screen and (min-height: 1366px) {
@@ -317,27 +314,14 @@ ion-title {
         margin: 2% 2% 0 0;
     }
 
-    .diva {
-        width: 100%;
-        height: 42%;
-    }
-
     .divb {
-        width: 100%;
-        height: 15%;
         margin-top: 0.5%;
     }
 }
 
 @media only screen and (min-height: 600px) and (max-height: 736px) {
-    .diva {
-        width: 100%;
-        height: 44%;
-    }
 
     .divb {
-        width: 100%;
-        height: 13%;
         margin-top: 0.5%;
     }
 
@@ -345,27 +329,16 @@ ion-title {
         margin: 2% 0 2% 0;
         font-weight: 400;
         color: #00dea5;
-        height: 5%;
     }
 }
 
 @media only screen and (min-height: 737px) and (max-height: 980px) {
-    .diva {
-        width: 100%;
-        height: 44%;
-    }
 
-    .divb {
-        width: 100%;
-        height: 14%;
-        margin-top: 0.5%;
-    }
 
     .interes {
         margin: 2% 0 0 0;
         font-weight: 400;
         color: #00dea5;
-        height: 5%;
     }
 }
 
