--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -64,7 +64,7 @@
                 </ion-col>
             </ion-row>
         </a>
-        <a class="hrefIcon" routerLink="/art-culture">
+        <a class="hrefIcon" (click)="presentToast()">
             <ion-row>
                 <ion-col size="2">
                     <div>
@@ -76,7 +76,7 @@
                 </ion-col>
             </ion-row>
         </a>
-        <a class="hrefIcon" routerLink="/sj-events">
+        <a class="hrefIcon" (click)="presentToast()">
             <ion-row>
                 <ion-col size="2">
                     <div>
@@ -88,7 +88,7 @@
                 </ion-col>
             </ion-row>
         </a>
-        <a class="hrefIcon" routerLink="/guided-visits">
+        <a class="hrefIcon" (click)="presentToast()">
             <ion-row>
                 <ion-col size="2">
                     <div>
