correccion link home

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -28,7 +28,7 @@
                     </a>
                 </ion-slide>
                 <ion-slide class="sliderHijo">
-                    <a class="banner" href="https://casadominga.com.uy/">
+                    <a class="banner" (click)="pageDominga()">
                         <img class="imgSlider" src="/assets/img/casaDominga.jpeg" />
                     </a>
                 </ion-slide>
