--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -79,7 +79,7 @@ ion-title {
     display: flex;
     flex-direction: row;
     margin: 1% 4% 2% 4%;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
