--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -72,7 +72,7 @@
                     </div>
                 </ion-col>
                 <ion-col>
-                    <p class="text">Arte y Cultura<em>en desarrollo</em></p>
+                    <p class="text">Arte y Cultura&nbsp;&nbsp;<em>en desarrollo</em></p>
                 </ion-col>
             </ion-row>
         </a>
@@ -84,7 +84,7 @@
                     </div>
                 </ion-col>
                 <ion-col>
-                    <p class="text">SJ Eventos<em>en desarrollo</em></p>
+                    <p class="text">SJ Eventos&nbsp;&nbsp;<em>en desarrollo</em></p>
                 </ion-col>
             </ion-row>
         </a>
@@ -96,7 +96,7 @@
                     </div>
                 </ion-col>
                 <ion-col>
-                    <p class="text">Visitas guiadas<em>en desarrollo</em></p>
+                    <p class="text">Visitas guiadas&nbsp;&nbsp;<em>en desarrollo</em></p>
                 </ion-col>
             </ion-row>
         </a>
